# xstd

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cmake/: xstdConfig.cmake.in
docs/: Doxyfile.in
docs/doxy/: mainpage.md
include/: CMakeLists.txt  configure.hpp.in
include/xstd/: algorithm.hpp  array.hpp  assert.hpp  chrono.hpp  config.hpp  configure.hpp  fstream.hpp  functional.hpp  iterator.hpp  memory.hpp  set.hpp  string.hpp  tuple.hpp  type_traits.hpp  utility.hpp  vector.hpp
include/xstd/detail/algorithm/: radix_sort.hpp
include/xstd/detail/array/: array_math.hpp  carray.hpp  const_array.hpp
include/xstd/detail/chrono/: auto_timer.hpp  cpu_time.hpp  maxres_steady_clock.hpp  timer.hpp
include/xstd/detail/config/: compiler.hpp  current.hpp  inline.hpp  null_macros.hpp  platform.hpp  restrict.hpp
include/xstd/detail/fstream/: fortran_io.hpp
include/xstd/detail/functional/: almost_equal_to.hpp  hash_combine.hpp
include/xstd/detail/iostream/: pretty_print.hpp
include/xstd/detail/iterator/: enumerate.hpp  range.hpp  zip.hpp
include/xstd/detail/memory/: aligned.hpp
include/xstd/detail/memory/allocator/: aligned_allocator.hpp  allocator.hpp
include/xstd/detail/memory/intrusive/: intrusive_base.hpp  intrusive_derived.hpp  intrusive_ptr.hpp  reference_count.hpp
include/xstd/detail/numeric/differential/: dual_number.hpp
include/xstd/detail/numeric/interpolation/: coordinate_ops.hpp  interpolator.hpp
include/xstd/detail/numeric/polynomial/: multivariate_polynomial.hpp  polynomial.hpp
include/xstd/detail/set/: intersection.hpp
include/xstd/detail/string/: string_to.hpp
include/xstd/detail/tuple/: algorithm.hpp  functional.hpp
include/xstd/detail/type_traits/: container_checks.hpp  empty_value.hpp  optimize_empty_base.hpp  type.hpp
include/xstd/detail/utility/: command_line.hpp  profiler.hpp  tracer.hpp
include/xstd/detail/vector/: bounded_vector.hpp  multi_indexer.hpp  vector_math.hpp
test/: CMakeLists.txt  catch_main.cpp
test/algorithm/: CMakeLists.txt  radix.cpp
test/array/: CMakeLists.txt  array_math.cpp
test/chrono/: CMakeLists.txt  auto_timer.cpp  cpu_time.cpp  timer.cpp
test/fstream/: CMakeLists.txt  fortran_io.cpp
test/functional/: CMakeLists.txt  almost_equal_to.cpp  hash_combine.cpp
test/iostream/: CMakeLists.txt  pretty_print.cpp
test/iterator/: CMakeLists.txt  enumerate.cpp  range.cpp  zip.cpp
test/memory/: CMakeLists.txt  aligned.cpp  aligned_allocator.cpp  allocator.cpp  intrusive_base.cpp  intrusive_derived.cpp  intrusive_ptr.cpp  reference_count.cpp
test/numeric/differential/: CMakeLists.txt  dual_number.cpp
test/numeric/polynomial/: CMakeLists.txt  polynomial.cpp
test/polynomial/: polynomial.cpp
test/set/: CMakeLists.txt  intersection.cpp
test/string/: CMakeLists.txt  string_to.cpp
test/tuple/: CMakeLists.txt  algorithm.cpp  functional.cpp
test/type_traits/: CMakeLists.txt  container_check.cpp  empty_value.cpp  optimize_empty_base.cpp  type.cpp
test/utility/: CMakeLists.txt  command_line.cpp  profiler.cpp  tracer.cpp
test/vector/: CMakeLists.txt  bounded_vector.cpp  multi_indexer.cpp  vector_math.cpp
